@@ -3,6 +3,8 @@ Changelog
 
 1.8.dev0 - (unreleased)
 -----------------------
+* Feature: Also fix varnish settings
+  [voineali refs #78655]
 
 1.7 - (2016-09-26)
 ------------------
